PBEXENGDQA-4614 add testing ProjectServiceTest and edit Daos in ProjectService.java